@@ -2972,15 +2972,14 @@ INLINE GEN
 idealpseudored(GEN I, GEN G)
 { return ZM_mul(I, ZM_lll(ZM_mul(G, I), 0.99, LLL_IM)); }
 
-/* I integral (not necessarily HNF), G ZM, rounded Cholesky form of a weighted
- * T2 matrix. Return m in I with T2(m) small */
+/* Same I, G; m in I with T2(m) small */
 INLINE GEN
 idealpseudomin(GEN I, GEN G)
 {
   GEN u = ZM_lll(ZM_mul(G, I), 0.99, LLL_IM);
   return ZM_ZC_mul(I, gel(u,1));
 }
-/* I, G as in idealpseudomin. Return an irrational m in I with T2(m) small */
+/* Same I,G; irrational m in I with T2(m) small */
 INLINE GEN
 idealpseudomin_nonscalar(GEN I, GEN G)
 {
@@ -2988,6 +2987,26 @@ idealpseudomin_nonscalar(GEN I, GEN G)
   GEN m = ZM_ZC_mul(I, gel(u,1));
   if (ZV_isscalar(m) && lg(u) > 2) m = ZM_ZC_mul(I, gel(u,2));
   return m;
+}
+/* Same I,G; t_VEC of irrational m in I with T2(m) small */
+INLINE GEN
+idealpseudominvec(GEN I, GEN G)
+{
+  long i, j, k, n = lg(I)-1;
+  GEN x, L, b = idealpseudored(I, G);
+  L = cgetg(1 + (n*(n+1))/2, t_VEC);
+  for (i = k = 1; i <= n; i++)
+  {
+    x = gel(b,i);
+    if (!ZV_isscalar(x)) gel(L,k++) = x;
+  }
+  for (i = 2; i <= n; i++)
+    for (j = 1; j < i; j++)
+    {
+      x = ZC_add(gel(b,i),gel(b,j));
+      if (!ZV_isscalar(x)) gel(L,k++) = x;
+    }
+  setlg(L,k); return L;
 }
 
 INLINE GEN
